# DJGen

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
config/: config_full.toml  datagen.toml  permutations.toml  plangen.toml  quick.toml  triangle.toml
src/: __init__.py  main.py  ui.py
src/analysis/: __init__.py  analyzer.py
src/datagen/: __init__.py  distributions.py  generator.py
src/plangen/: __init__.py  generator.py  patterns.py
src/ui/: __init__.py  analysis_tab.py  components.py  data_tab.py  main.py  models.py  utils.py
src/utils/: __init__.py  toml_parser.py
src/visualization/: __init__.py  generator.py
